<resources>
    <string name="app_name">YuLen</string>
    <string name="Login">Button</string>
    <string name="login">Login</string>
    <string name="masukkan_nomor_ponsel">Masukkan Nomor Ponsel</string>
    <string name="daftar">Daftar</string>
    <string name="masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="harap_isikan_data_yang_sesuai">Harap Isikan data yang sesuai..</string>
    <string name="masukkan_sandi">Masukkan Sandi</string>
    <string name="daftarJudul">Daftar</string>
    <string name="loginjudul">Login</string>
    <string name="sudah_daftar_klik_untuk_login">Sudah Daftar? Klik untuk login</string>
    <string name="belum_punya_akun_klik_untuk_daftar">Belum Punya Akun? Klik untuk Daftar</string>
    <string name="masuk_grup">Masuk Grup</string>
    <string name="judul_grup">Judul Grup</string>
    <string name="kode_grup">Kode Grup</string>
    <string name="buat_grup">Buat Grup</string>
    <string name="keterangan_grup">Keterangan Grup</string>
    <string name="masukkan_nama_grup">Masukkan Nama Grup</string>
    <string name="masukkan_keterangan">Masukkan Keterangan</string>
    <string name="nominal_iuran_per_anggota">Nominal Iuran Per Anggota</string>
    <string name="buka_tanggal">Buka Tanggal</string>
    <string name="tutup_tanggal">Tutup Tanggal</string>
    <string name="buat">Buat</string>
    <string name="tagihan">Tagihan</string>
    <string name="anggota">Anggota</string>
    <string name="bayar">Bayar</string>
    <string name="masuk">Masuk</string>
    <string name="masukkan_kode_grup">Masukkan Kode Grup</string>
    <string name="masukkan_nominal">Masukkan Nominal</string>
    <string name="masukkan_tanggal_buka">Masukkan Tanggal Buka</string>
    <string name="masukkan_tanggal_tutup">Masukkan Tanggal Tutup</string>
    <string name="jumlah_tagihan">Jumlah Tagihan</string>
    <string name="nama_anggota">Nama Anggota</string>
    <string name="dana">DANA</string>
    <string name="lanjut">Lanjut</string>
    <string name="pembayaran_berhasil">Pembayaran Berhasil!</string>
</resources>