<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Krem"
    tools:context=".daftarActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="120dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fredoka"
        android:text="@string/daftarJudul"
        android:textColor="@color/Hijau"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="2dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:srcCompat="@drawable/hr" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/form"
        android:ems="10"

        android:fontFamily="@font/fredoka"
        android:hint="@string/masukkan_nomor_ponsel"
        android:inputType="phone"
        android:paddingLeft="10dp"

        android:textColor="@color/Hijau"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/form"
        android:ems="10"

        android:fontFamily="@font/fredoka"
        android:hint="@string/masukkan_nama_lengkap"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"

        android:textColor="@color/Hijau"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/form"
        android:ems="10"

        android:fontFamily="@font/fredoka"
        android:hint="@string/masukkan_sandi"
        android:inputType="textPassword"
        android:paddingLeft="10dp"

        android:textColor="@color/Hijau"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/fredoka"
        android:text="@string/daftar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:fontFamily="@font/fredoka"
            android:text="Sudah punya akun?"
            android:textAlignment="center"
            android:textColor="@color/Hijau"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="682dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/fredoka"
            android:text="Klik untuk Masuk"
            android:textColor="@color/danger"
            tools:layout_editor_absoluteX="223dp"
            tools:layout_editor_absoluteY="682dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

